# TuneMaster

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TuneMaster_ru_RU.ts  main.cpp
audio/: mic_input.cpp  mic_input.h  pitch_detector.cpp  pitch_detector.h  sine_wave_player.cpp  sine_wave_player.h
theory/: audio_quiz_widget.cpp  audio_quiz_widget.h  note_trainer.cpp  note_trainer.h  quiz_manager.cpp  quiz_manager.h  quiz_widget.cpp  quiz_widget.h
tuner/: string_tuner.cpp  string_tuner.h
ui/: audio_wave_widget.cpp  audio_wave_widget.h  main_window.cpp  main_window.h  tuner_widget.cpp  tuner_widget.h  user_settings_dialog.cpp  user_settings_dialog.h
